--- a/contacto.html
+++ b/contacto.html
@@ -122,7 +122,7 @@
         <!--<center><p style="margin-top: 18px; color:white" bolder><div><a class="menu" href="mailto:agenciafreefreaks@gmail.com">E-Mail</a></div></center>-->
 
               <divㅤ</div>ㅤ
-              <center><p style="margin-top: 18px; color:white" bolder ><div><a class="menu" target="_blank" href="https://www.linkedin.com/in/tomas-long-705734247/"> Linkedin </a></div></center>
+              <!--<center><p style="margin-top: 18px; color:white" bolder ><div><a class="menu" target="_blank" href="https://www.linkedin.com/in/tomas-long-705734247/"> Linkedin </a></div></center>-->
       </strong>
 
     </body>
