--- a/Fotografias.html
+++ b/Fotografias.html
@@ -14,6 +14,21 @@
       <font face="Arial" size="7" color: "black">
       <b><a href="menu.html" style="color: black">Menu</a></b>
     <div class="Galeria">
+      <a href="img/t1.jpg"data-lightbox="Galeria"><img src="imgss/t1.jpg"></a>
+      <a href="img/t2.jpg"data-lightbox="Galeria"><img src="imgss/t2.jpg"></a>
+      <a href="img/t3.jpg"data-lightbox="Galeria"><img src="imgss/t3.jpg"></a>
+      <a href="img/t4.jpg"data-lightbox="Galeria"><img src="imgss/t4.jpg"></a>
+      <a href="img/t5.jpg"data-lightbox="Galeria"><img src="imgss/t5.jpg"></a>
+      <a href="img/t6.jpg"data-lightbox="Galeria"><img src="imgss/t6.jpg"></a>
+      <a href="img/t7.jpg"data-lightbox="Galeria"><img src="imgss/t7.jpg"></a>
+      <a href="img/t8.jpg"data-lightbox="Galeria"><img src="imgss/t8.jpg"></a>
+      <a href="img/t9.jpg"data-lightbox="Galeria"><img src="imgss/t9.jpg"></a>
+      <a href="img/t10.jpg"data-lightbox="Galeria"><img src="imgss/t10.jpg"></a>
+      <a href="img/t11.jpg"data-lightbox="Galeria"><img src="imgss/t11.jpg"></a>
+      <a href="img/t12.jpg"data-lightbox="Galeria"><img src="imgss/t12.jpg"></a>
+      <a href="img/t13.jpg"data-lightbox="Galeria"><img src="imgss/t13.jpg"></a>
+      <a href="img/t14.jpg"data-lightbox="Galeria"><img src="imgss/t14.jpg"></a>
+      <a href="img/t15.jpg"data-lightbox="Galeria"><img src="imgss/t15.jpg"></a>
       <a href="img/01.jpg"data-lightbox="Galeria"><img src="imgss/01.jpg"></a>
       <a href="img/1.jpg"data-lightbox="Galeria"><img src="imgss/1.jpg"></a>
       <a href="img/2.jpg"data-lightbox="Galeria"><img src="imgss/2.jpg"></a>
