--- a/contacto.html
+++ b/contacto.html
@@ -117,7 +117,7 @@
     <body>
 
       <strong>
-        <h1 style="margin-top: 76px; color:white" bolder>    <center><div style="margin-top: 76px; color:white" bolder>Contacto:</div></center>
+        <h1 style="margin-top: 76px; color:white" bolder>    <center><div style="margin-top: 76px; color:white" bolder>Contacto: Con miedo de empezar a trabajar por ahora.</div></center>
           <div>ㅤ</div>
         <!--<center><p style="margin-top: 18px; color:white" bolder><div><a class="menu" href="mailto:agenciafreefreaks@gmail.com">E-Mail</a></div></center>-->
 
