--- a/menu.html
+++ b/menu.html
@@ -44,34 +44,39 @@
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
-      <b style="left:700px; position: absolute;top: 30%; color: red"><a href="Textos.html"> Mis Textos</b>
+      <b style="left:700px; position: absolute;top: 36%; color: red"><a href="Textos.html"> Mis Textos</b>
       </div>
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
-      <b style="left:700px; position: absolute;top: 51%; color: red"><a href="descarga.html"> Descarga</b>
+      <b style="left:700px; position: absolute;top: 41%; color: red"><a target="_blank" href="https://www.instagram.com/freektom1/"> Mis Dibujos </b>
+      </div>
+
+      <div style= "text-align: top;">
+        <font size="5" face=Arial>
+      <b style="left:700px; position: absolute;top: 46%; color: red"><a href="descarga.html"> Descarga</b>
       </div>
 
 
 
       <div id="div9" style= "text-align: top;">
         <font size="18" face=Arial>
-      <b class="fr" style="left:635px; position: absolute;top: 66%; color: red"><a href="freeks.html">F R E E K S</b>
+      <b class="fr" style="left:635px; position: absolute;top: 72%; color: red"><a href="freeks.html">F R E E K S</b>
     </div>
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
-      <b style="left:700px; position: absolute;top: 37%; color: red"><a href="Musica.html"> Mi Musica</b>
+      <b style="left:700px; position: absolute;top: 51%; color: red"><a href="Musica.html"> Mi Musica</b>
       </div>
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
-      <b style="left:700px; position: absolute;top: 44%; color: red"><a href="Pareidolias.html"> Mis Paredolias</b>
+      <b style="left:700px; position: absolute;top: 56%; color: red"><a href="Pareidolias.html"> Mis Paredolias</b>
       </div>
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
-      <b style="left:700px; position: absolute;top: 58%; color: red"><a target="_blank" href="https://www.barnesandnoble.com/w/la-misteriosa-aventura-de-alberto-tom-s-collado-long/1142660478"> Mi Audiolibro</b>
+      <b style="left:700px; position: absolute;top: 61%; color: red"><a target="_blank" href="https://www.barnesandnoble.com/w/la-misteriosa-aventura-de-alberto-tom-s-collado-long/1142660478"> Mi Audiolibro</b>
       </div>
 
 
@@ -80,12 +85,15 @@
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 55%; color: red"><a href="Videoclips.html"> Videoclips</b>
       </div>
+      -->
+
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
-      <b style="left:700px; position: absolute;top: 61%; color: red"><a href="Sobre Mi.html"> Sobre Mi</b>
+      <b style="left:700px; position: absolute;top: 66%; color: red"><a href="Sobre Mi.html"> Sobre Mi</b>
       </div>
 
+      <!--
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
@@ -108,7 +116,7 @@
     </center>
 
 <font size="7" face=Arial>
-<a href="index.html" style="font-size:65px; left:625px; position: absolute;top: 16%; color: black"><strong>FreekTom</strong></a>
+<a href="index.html" style="font-size:65px; left:625px; position: absolute;top: 24%; color: black"><strong>FreekTom</strong></a>
 
 
 
