--- a/menu.html
+++ b/menu.html
@@ -49,7 +49,7 @@
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
-      <b style="left:700px; position: absolute;top: 41%; color: red"><a target="_blank" href="https://www.instagram.com/freektom1/"> Mis Dibujos </b>
+      <b style="left:700px; position: absolute;top: 41%; color: red"><a target="_blank" href="https://www.instagram.com/freektom/"> Mis Dibujos </b>
       </div>
 
       <div style= "text-align: top;">
