--- a/menu.html
+++ b/menu.html
@@ -54,7 +54,7 @@
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
-      <b style="left:700px; position: absolute;top: 46%; color: red"><a href="descarga.html"> Descarga</b>
+      <b style="left:700px; position: absolute;top: 46%; color: red"><a href="descarga.html"> Mi Programa</b>
       </div>
 
 
