agrege lo que significa friktom

--- a/Sobre mi.html
+++ b/Sobre mi.html
@@ -13,7 +13,7 @@
     <font face=Arial>
   <center><H3><font color="black">F R E E K T O M.
 
-Buenas mi nombre artístico es Freektom y HappyBoii, Free de libre  soy de un horóscopo muy bravo basándonos en características cósmicas, hijo de la madre más santa, mi padrastro me ayudo a criarme muy bien, es buena persona, siempre me gusto la diversión, el rock, saltar, disfrazarme, correr, andar en bicicleta, ir al jardín!
+Buenas mi nombre artístico es Freektom y HappyBoii. Se pronuncia Friìktòm y la primera mitad de esa palabra es Free, Friì de libre en ingles, pero si le quitàs la, "E", final y agregas una, "A"  y una ,"K" suena, freak, friìk, lo que yo hice literal fue poner el free, friì y agregarle al final una, "K" para leer el free con sus dos, "E", y que al final una ,"K", para que se pronunciie friìk, que significa, "raro" ,todo en ingles, y agregue al final una abrebiacion de mi nombre, "tom", Libre y raro Tomàs, bueno, yo soy de un horóscopo muy bravo basándonos en características cósmicas, hijo de la madre más santa, mi padrastro me ayudo a criarme muy bien, es buena persona, siempre me gusto la diversión, el rock, saltar, disfrazarme, correr, andar en bicicleta, ir al jardín!
 
 Me mudé a Chile cuando tenía 7 años y viví 14 en Chile, tengo a todas mis viejas y buenas amistades ahí, estoy un poco solo acá en Uruguay, no encajo con la cultura al menos creo, pero estoy acostumbrado a ser un poco "distinto".
 
