--- a/menu.html
+++ b/menu.html
@@ -58,10 +58,15 @@
       </div>
 
 
+      <div style= "text-align: top;">
+        <font size="5" face=Arial>
+      <b style="left:700px; position: absolute;top: 71%; color: red"><a href="remeras.html"> Mis Remeras</b>
+      </div>
+
 
       <div id="div9" style= "text-align: top;">
         <font size="18" face=Arial>
-      <b class="fr" style="left:635px; position: absolute;top: 72%; color: red"><a href="freeks.html">F R E E K S</b>
+      <b class="fr" style="left:635px; position: absolute;top: 77%; color: red"><a href="freeks.html">F R E E K S</b>
     </div>
 
       <div style= "text-align: top;">
