--- a/Textos.html
+++ b/Textos.html
@@ -19,8 +19,7 @@
       <img src="cronometrado.png" 
 
           <h4><p> Los Tiempos
-      Por: Tomas Collado Long.
-O fue Diego, Lorena o mi madre.
+      Fue Diego, Lorena o mi madre.
        </p></h4>
         
     <h4><p> Los Tiempos
