--- a/menu.html
+++ b/menu.html
@@ -92,9 +92,15 @@
       </div>
       -->
 
+      <div style= "text-align: top;">
+        <font size="60" face=Arial>
+      <b style="left:900px; position: absolute;top: 50%; color: red"><a href="videosuno.html"> V I D E O S</b>
+      </div>
+
+
 
       <div style= "text-align: top;">
-        <font size="5" face=Arial>
+        <font size="5" face=Arial black>
       <b style="left:700px; position: absolute;top: 66%; color: red"><a href="Sobre Mi.html"> Sobre Mi</b>
       </div>
 
