--- a/videosuno.html
+++ b/videosuno.html
@@ -39,24 +39,33 @@
     
     <center><H1><u><b><a href="menu.html" style= "color: rgb(207, 3, 3)">M E N U</a></b></u><H1></center>
 
-    <iframe width="360" height="315" src="https://www.youtube.com/embed/aewvVV8b6Fw?si=lhKuFwdDim08m49L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="350" height="215" src="https://www.youtube.com/embed/aewvVV8b6Fw?si=lhKuFwdDim08m49L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-    <iframe width="360" height="315" src="https://www.youtube.com/embed/ukfd46eSMDA?si=Uxzl0suVUL1Qqrlw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="350" height="215" src="https://www.youtube.com/embed/ukfd46eSMDA?si=Uxzl0suVUL1Qqrlw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-    <iframe width="360" height="315" src="https://www.youtube.com/embed/RVKho8XTWk4?si=KupvHzvlmUGY4lc9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="350" height="215" src="https://www.youtube.com/embed/RVKho8XTWk4?si=KupvHzvlmUGY4lc9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-    <iframe width="360" height="315" src="https://www.youtube.com/embed/AlIbIxuyl9s?si=seP6p9q7B0M2Rc5Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="350" height="215" src="https://www.youtube.com/embed/t97jAan3ZXw?si=WxOaAue0w2-TuKUf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-    <iframe width="360" height="315" src="https://www.youtube.com/embed/3RWLd9C8LTo?si=WiwBA5t48XYuM9sC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="350" height="215" src="https://www.youtube.com/embed/3RWLd9C8LTo?si=WiwBA5t48XYuM9sC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-    <iframe width="360" height="315" src="https://www.youtube.com/embed/xLTAxgBgC54?si=uFpxnUAjWy5JfQSm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-    <iframe width="360" height="315" src="https://www.youtube.com/embed/WRWAiFCAIcA?si=wCYwFoVc_uMfdZ1E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="350" height="215" src="https://www.youtube.com/embed/WRWAiFCAIcA?si=wCYwFoVc_uMfdZ1E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-    <iframe width="360" height="315" src="https://www.youtube.com/embed/vwdEXgEeBEM?si=yJq_moVCSQpJg-Lt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="350" height="215" src="https://www.youtube.com/embed/_5Jw7eyIueU?si=4S0WpW6UJCYNTZT1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-    <iframe width="360" height="315" src="https://www.youtube.com/embed/QCsOEozHKVo?si=pxAXVcy5hDNOEFbZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="350" height="215" src="https://www.youtube.com/embed/xCaPzYv5zAI?si=jly91OJDKaoJw35v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+    <iframe width="350" height="215" src="https://www.youtube.com/embed/w5tcR7QD0cg?si=oS8kxA7z3oksrtkt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <iframe width="360" height="215" src="https://www.youtube.com/embed/QXgj9A8lSg8?si=0CXbo2z6RMUB8bhF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+
+
+    <iframe width="350" height="215" src="https://www.youtube.com/embed/QCsOEozHKVo?si=pxAXVcy5hDNOEFbZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    
 
   </body>
 </html>
