fijado al medio videos

--- a/menu.html
+++ b/menu.html
@@ -64,10 +64,10 @@
       </div>
 
 
-      <div id="div9" style= "text-align: top;">
-        <font size="18" face=Arial>
-      <b class="fr" style="left:635px; position: absolute;top: 77%; color: red"><a href="freeks.html">F R E E K S</b>
-    </div>
+      <div style= "text-align: top;">
+        <font size="50" face=Arial>
+      <b style="left: 639px;px; position: absolute;top: 77%; color: red"><a href="videosuno.html"> V I D E O S</b>
+      </div>
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
@@ -92,10 +92,7 @@
       </div>
       -->
 
-      <div style= "text-align: top;">
-        <font size="60" face=Arial>
-      <b style="left:900px; position: absolute;top: 50%; color: red"><a href="videosuno.html"> V I D E O S</b>
-      </div>
+      
 
 
 
@@ -177,3 +174,5 @@
 
   /* Aca termina el codigo CSS */
 </style>
+
+
