--- a/menu.html
+++ b/menu.html
@@ -60,7 +60,7 @@
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
-      <b style="left:700px; position: absolute;top: 71%; color: red"><a href="friki1.html"> MIS VIDEOS</b>
+      <b style="left:700px; position: absolute;top: 71%; color: red"><a href="videosuno.html"> MIS VIDEOS</b>
       </div>
 
 
